# flash-assist

./: .gitignore  .gitpod.yml  .replit  README.md  TODO.md  helpers.py  keepalive.py  main.py  pyproject.toml  requirements.txt  users.db  users.db-journal  views.py
.github/workflows/: python-app.yml  python-compile  python-compile-linux.yml  python-compile-mac.yml  python-compile-win.yml  python-compile-windows.yml  python-compile.yml
bot/: helpers.py  main.py  requirements.txt  views.py
bot/cogs/: dev.py  error.py  statcord.py  verify.py  vf_verify.py
cogs/: dev.py  ender_listen.py  error.py  reminders.py  statcord.py  tasks.py  verify.py  vf_verify.py
docs/: CNAME  index.md
flash-assist-bot/: helpers.py  main.py  views.py
flash-assist-bot/cogs/: dev.py  error.py  statcord.py  tasks.py  verify.py
flash-assist-rich-presence/: main.py
rich-presence/: main.py
static/styles/: min.css
templates/: index.html  policy.html  tos.html  tos.txt
