[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Just a Squid <you@example.com>"]
description = ""
name = "repl_python3_flash-assist"
version = "0.0.0"
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.dev-dependencies]
